[BUG][IE7] Stop the top of the active tab being cut off [#56420302]

--- a/stylesheets/_tabs.scss
+++ b/stylesheets/_tabs.scss
@@ -14,6 +14,9 @@
 		color: $black;
 		display: block;
 		line-height: $line-height-base * 1.75;
+		@include ie-lte(7) {
+			height: $line-height-base * 1.75;
+		}
 		padding: 0 $gutter-width / 2;
 		text-decoration: none;
 
